# ChangeLog for net-p2p/freenet-bin
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Dec 2007; (Tommy[D]) tommy100@gmx.de freenet-bin-0.7.1095.ebuild:
  Added info for startup

  22 Dec 2007; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1091.ebuild,
  +freenet-bin-0.7.1095.ebuild:
  New upstream release

  16 Dec 2007; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1090.ebuild,
  +freenet-bin-0.7.1091.ebuild:
  New upstream release

  15 Dec 2007; (Tommy[D]) tommy100@gmx.de freenet-bin-0.7.1090.ebuild:
  Add postrm info

  15 Dec 2007; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1089.ebuild,
  +freenet-bin-0.7.1090.ebuild:
  New upstream release

  06 Dec 2007; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1088.ebuild,
  +freenet-bin-0.7.1089.ebuild:
  New upstream release

  04 Dec 2007; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1087.ebuild,
  +freenet-bin-0.7.1088.ebuild:
  New upstream release

  04 Dec 2007; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1086.ebuild,
  +freenet-bin-0.7.1087.ebuild:
  New upstream release

  03 Dec 2007; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1085.ebuild,
  +freenet-bin-0.7.1086.ebuild:
  New upstream release

  10 Nov 2007; (Tommy[D]) tommy100@gmx.de +freenet-bin-0.7.1071.ebuild:
  New upstream release with a workaround, please leave 1070 in tree

  26 Oct 2007; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1069.ebuild,
  +freenet-bin-0.7.1070.ebuild:
  New upstream release

  24 Oct 2007; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1068.ebuild,
  +freenet-bin-0.7.1069.ebuild:
  New upstream release

  23 Oct 2007; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1065.ebuild,
  +freenet-bin-0.7.1068.ebuild:
  New upstream release

  26 Sep 2007; Tommy[D] <tommy100@gmx.de>
  -freenet-bin-0.7.1064.ebuild, +freenet-bin-0.7.1065.ebuild:
  New upstream release

  24 Sep 2007; Tommy[D] <tommy100@gmx.de>
  -freenet-bin-0.7.1062.ebuild, +freenet-bin-0.7.1064.ebuild:
  New upstream release
