@@ -1,7 +1,7 @@
 AUX freenet 416 RMD160 95efeda98fe723027c74729b03fd293ca29bdc7a SHA1 796d336341796d081454ebcc45248e90fffaed91 SHA256 d3b665e8d619d995ef9cb67ed4006c96bc4fdf80e6b7923247e022268ab8bae5
 DIST freenet-ext.jar 2452429 RMD160 fdac9646f7fbb5ee82ad62580191695cc6bef593 SHA1 712aaf061e5e35df47ab6727476b78a0cf8c47da SHA256 1ab33492054eb6e8550f608d3b7d6f3a5117b5905f342bfad8cb38a2a9350bf2
-DIST freenet-r16777-snapshot.jar 2309048 RMD160 e2591b14357776431d2ddcff8c21a8c4038767b5 SHA1 44c21123b59b33df56f46b44affc2fdaf95bed0d SHA256 4137b8848eaa5f15bd91090925f363ca308b929af8224b981dac507bf88f9dc7
+DIST freenet-r16799-snapshot.jar 2309519 RMD160 7d0c5babebae2703c3369af73f94522d5ac3f58e SHA1 31fd31eb944acbca6ec1278f368f774483afa5ec SHA256 5285a8da6a4e0cbd48e40d7c50f34dc975b118551a148b738ead1728dd466ff2
 DIST freenet07.tar.gz 380903 RMD160 216fc44016efa6a19291d74cb2a46cb005efbb86 SHA1 0d86e6516daeee9aec9b1a67eb06a3e8953ed3c6 SHA256 0c225694d4c3c81f62ac07fc5004196fbf7807b946dbed63740fdbc77f631513
-EBUILD freenet-bin-0.7.1095.ebuild 2362 RMD160 0bfeb3b5c4df34a605c6d4d38e0f734ef4bef266 SHA1 6d08c6c11d6c11b56a25eece691724bc0ba47f79 SHA256 8f1097033c3aaec28995b7b43e81ed53e0d744b9d34db64bdfcc15943cbb800f
-MISC ChangeLog 4331 RMD160 f5632d415dce8aedf2380faf480ff3466a11caa5 SHA1 c66d030d8700f98af33fdd3fa059ba59e2fd2d1d SHA256 dac470db9c61664631df4f184150f00bd447b12307983e0d2ef567622af91710
+EBUILD freenet-bin-0.7.1096.ebuild 2310 RMD160 0a725ecf6e18263573a12fd0e8441aab4b77c07d SHA1 4577bff4f68ea8b90a39fe835c4166eff715b781 SHA256 2f3928875a79b2bb8356a39e112227160ae2d9e1a5829781f68b1280d2ab94c4
+MISC ChangeLog 4459 RMD160 4877b034155fbaba7f2b1c301d9ccebdc36d12ee SHA1 0733d766ece21c7536658bbcc4c96885a789db8b SHA256 7026114b716057cf21dad33900f453813151e453bceb98f7910bf2ca298d0dce
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
