@@ -1,5 +1,5 @@
 AUX freenet 416 RMD160 95efeda98fe723027c74729b03fd293ca29bdc7a SHA1 796d336341796d081454ebcc45248e90fffaed91 SHA256 d3b665e8d619d995ef9cb67ed4006c96bc4fdf80e6b7923247e022268ab8bae5
-DIST freenet-sources-v1095.tar.bz2 19224683 RMD160 fb7d10220f84041cbd60ca511c477a23e528b39f SHA1 56dad84f639e6c87fdfc09b1491cfb7381bcdcb3 SHA256 06fd3c120447288c665aae3a36c27470470789f17f642238b34996c3b3f3ee7f
-EBUILD freenet-0.7.1095.ebuild 2064 RMD160 00797774aa8228f734ebd38fc9e79ae5a9c18c43 SHA1 cdb9f2ef3ea56a0cc0ede596cff23483476d814c SHA256 634576737d14ada716479dda5be1807e081462d036f7b78fd3c81261cb581fb7
-MISC ChangeLog 2740 RMD160 0c609247bfb60e3324f0ffd02574d05feaee1366 SHA1 20bd4589eb5b034ae52fc87a32d73d63f3a8f204 SHA256 1b3a592032e3dc26a143bc453b60e89f20270a170f9d3a1dfd81206b5e0e72ee
+DIST freenet-sources-v1096.tar.bz2 19225416 RMD160 df2d841f3dc98d5b1e7003530994fcee1ce92bc0 SHA1 0bdb12c81454a142a51d109dd54ada52290baecc SHA256 b2d84620116b2358fddf2f2ffc9ba3d22f6f250d0e42c5fce7ddea7519d66ed3
+EBUILD freenet-0.7.1096.ebuild 2010 RMD160 2ccd80e41f430b2f42cc390d23eeeef0259d7fa6 SHA1 75c06e45a3a54b859355250bf5a7f56da2cc466a SHA256 8335bd31766d0ecb1cecd89a629dd952a65591c96ab124339001618f89c4b3de
+MISC ChangeLog 2860 RMD160 940c83504b02d76aa85c5afbe823f170f6a235c2 SHA1 f7d60416530fdd969b2208b8290eda4f7d87272c SHA256 7101941150e3e72ba64b13a52c1ed86f47d2240d25bc743fddd6c8d13a876e82
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
