@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  23 Dec 2007; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1095.ebuild,
+  +freenet-bin-0.7.1096.ebuild:
+  New upstream release
+
   22 Dec 2007; (Tommy[D]) tommy100@gmx.de freenet-bin-0.7.1095.ebuild:
   Added info for startup
 
